log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: log-output
  namespace: exercises

spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-generator
          image: log-output-generator:1.10
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-data
              mountPath: /shared
        - name: log-reader
          image: log_output_reader:2.1
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-data
              mountPath: /shared
      volumes:
        - name: shared-data
          emptyDir: {}
