log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises

spec:
  selector:
    app: log-output

  ports:
    - port: 3000
      targetPort: 3000
